fix: Clean up userTree criteria handling and improve CSS styles for better readability

--- a/app/component/TimeLine.module.css
+++ b/app/component/TimeLine.module.css
@@ -19,10 +19,11 @@
 }
 
 .tickLabel {
+  font-family: 'Oneday', sans-serif;
   position: absolute;
   top: 18px;
   font-size: 0.7rem;
-  transform: translateX(-50%);
+  transform: translate(-50%,-50%);
   white-space: nowrap;
   color: #555;
 }
@@ -79,10 +80,11 @@
 
 .dropdownMenuCustom {
   padding: 0px 10px;
+  top: -200%;
 }
 .dropdownCheck input:checked{
-  background-color: #43434185;
-  border: #434341 solid 1px;
+  background-color: #b89c8c;
+  border: #43434150 solid 1px;
 }
 .dropdownCheck label {
   font-size: 0.9rem;
@@ -90,9 +92,12 @@
 }
 
 .filterButton {
-  background-color: inherit !important;
-  color: #43434185 !important;
-  border: solid 1px #43434185 !important;
+  background-color: #917666 !important;
+  font-family: 'Oneday', sans-serif;
+  font-size: 12px !important;
+  font-weight: bold !important;
+  color: #eaeaea !important;
+  border: solid 1px #43434150 !important;
   border-radius: 6px !important;
-  padding: 4px 10px !important;
+  padding: 2px 10px 4px !important;
 }
